First commit of the new branch

--- a/boba_bunny/index.html
+++ b/boba_bunny/index.html
@@ -1,5 +1,17 @@
-Hello, bunnies! 
+<html>
+    <head>
 
-Implementing The UI of the following
+    </head>
+    <body>
 
-https://dribbble.com/shots/11126270-Daily-UI-Challenge-Item-Customization-with-Boba-Bunny
+        <!-- Main Image -->
+        <img> 
+
+        <div>
+            Choose Animal
+        </div>
+
+        
+
+    </body>
+</html>
