--- a/watch/index.html
+++ b/watch/index.html
@@ -125,6 +125,35 @@
 
     <div class="spacebar"></div>
 
+    <div id="contact" class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2>Latest Updates</h2>
+            </div>
+            <div class="col-sm-6">
+                <h2>Send a Message!</h2>
+                <br>
+                <form>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea class="form-control" id="message" required></textarea>
+                    </div>
+                    <button type="submit" class="btn" id="btn-contact">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div> <!-- Contact -->
+
+    <div class="spacebar"></div>
+
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
