--- a/watch/index.html
+++ b/watch/index.html
@@ -125,6 +125,34 @@
 
     <div class="spacebar"></div>
 
+    <div id="about" class="container">
+        <div class="row">
+
+            <div class="col-sm-6 align-self-center">
+                <img class="image" src="profile.png">
+            </div> <!-- Hero Clock -->
+            
+            <div class="col-sm-6 align-self-center">
+
+                <h2> About Me </h2>
+                <p>
+                    Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                    Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                    Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.  
+                </p>
+
+            </div> <!-- Hero Text -->
+            
+        </div>
+    </div> <!-- How It Works -->
+
+    <div class="spacebar"></div>
+
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
