--- a/watch/public/index.html
+++ b/watch/public/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!-- Our CSS -->
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="social-media.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/social-media.css">
 </head>
 
 <body>
@@ -149,21 +149,22 @@
             <div class="col-sm-6">
                 <h2>Send a Message!</h2>
                 <br>
-                <form action="mailto:chestercervantes13@gmail.com" method="post" enctype="text/plain">
+                <form action="send" method="post">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" required>
+                        <input type="text" class="form-control" id="name" name="name" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" required>
+                        <input type="email" class="form-control" id="email" name="email" required>
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea class="form-control" id="message" required></textarea>
+                        <textarea class="form-control" id="message" name="message" required></textarea>
                     </div>
                     <button type="submit" class="btn" id="btn-contact">Submit</button>
                 </form>
+                <p id="response-contact"></p>
             </div> <!-- Email form -->
         </div>
     </div> <!-- Contact -->
