--- a/watch/public/index.html
+++ b/watch/public/index.html
@@ -69,6 +69,7 @@
                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                 </p>
+                <img id="hero_arrow" src="assets/arrow.png">
             </div> <!-- Hero Text -->
 
         </div>
