change How It Works text

--- a/watch/public/index.html
+++ b/watch/public/index.html
@@ -95,28 +95,35 @@
 
         <div class="col-sm-6 align-self-center">
 
-            <h2> 1. Lorem ipsum dolor sit amet </h2>
+            <h2> 1. Book an appointment </h2>
             <p>
-                Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Click on the Contact page, press “Check my availability” and select a time that works for both of us. Or send me a message with details describing the issues you’re  having with your watch.
             </p>
             <br>
-            <h2> 2. Sed do eiusmod tempor incididunt </h2>
+            <h2> 2. Virtual appointment </h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                At the time of the appointment, I’ll email you the invitation for the Google Meet link. From there, we can discuss the issues you may be having with your watch. Easy right?
             </p>
             <br>
-            <h2> 3. Ut enim ad minim veniam </h2>
+            <h2> 3. Send me your watch: </h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                If we decide that your watch needs a comprehensive estimate, we can then arrange a pick up or a time to meet so that I may have a closer look.
             </p>
             <br>
-            <h2> 4. Cillum dolore eu fugiat nulla pariatur </h2>
+            <h2> 4. Estimate: </h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Once I’ve completed the estimate, I will send you a detailed work order with all necessary repairs as well as a timeline for completion..
+            </p>
+            <br>
+            <h2> 5. Go Ahead: </h2>
+            <p>
+                As soon as you give the go ahead, I will start the repair process. I’ll send you updates on the progress until the job is completed.
+            </p>
+            <br>
+            <h2> 6. Finished: </h2>
+            <p>
+                Your watch is now ready to face the world again. I’ll contact you with the good news and once I’ve received payment, we can then arrange the process for returning the watch to you.
+                All my full service repairs come with a 1 year service warranty.
             </p>
 
         </div> <!-- Hero Text -->
