change About Me text

--- a/watch/public/index.html
+++ b/watch/public/index.html
@@ -56,21 +56,21 @@
 <div id="hero" class="container">
     <div class="row">
 
-            <div class="col-sm-6">
-                <img id="hero_img" src="clock_white.png">
-            </div> <!-- Hero Clock -->
-            
-            <div class="col-sm-6 align-self-center">
-                <h1> The Dialed In Watchmaker </h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, 
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                </p>
-                <img id="hero_arrow" src="assets/arrow.png">
-            </div> <!-- Hero Text -->
+        <div class="col-sm-6">
+            <img id="hero_img" src="clock_white.png">
+        </div> <!-- Hero Clock -->
+
+        <div class="col-sm-6 align-self-center">
+            <h1> The Dialed In Watchmaker </h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
+            <img id="hero_arrow" src="assets/arrow.png">
+        </div> <!-- Hero Text -->
 
     </div>
 </div> <!-- Hero -->
@@ -97,32 +97,38 @@
 
             <h2> 1. Book an appointment </h2>
             <p>
-                Click on the Contact page, press “Check my availability” and select a time that works for both of us. Or send me a message with details describing the issues you’re  having with your watch.
+                Click on the Contact page, press “Check my availability” and select a time that works for both of us. Or
+                send me a message with details describing the issues you’re having with your watch.
             </p>
             <br>
             <h2> 2. Virtual appointment </h2>
             <p>
-                At the time of the appointment, I’ll email you the invitation for the Google Meet link. From there, we can discuss the issues you may be having with your watch. Easy right?
+                At the time of the appointment, I’ll email you the invitation for the Google Meet link. From there, we
+                can discuss the issues you may be having with your watch. Easy right?
             </p>
             <br>
             <h2> 3. Send me your watch: </h2>
             <p>
-                If we decide that your watch needs a comprehensive estimate, we can then arrange a pick up or a time to meet so that I may have a closer look.
+                If we decide that your watch needs a comprehensive estimate, we can then arrange a pick up or a time to
+                meet so that I may have a closer look.
             </p>
             <br>
             <h2> 4. Estimate: </h2>
             <p>
-                Once I’ve completed the estimate, I will send you a detailed work order with all necessary repairs as well as a timeline for completion..
+                Once I’ve completed the estimate, I will send you a detailed work order with all necessary repairs as
+                well as a timeline for completion..
             </p>
             <br>
             <h2> 5. Go Ahead: </h2>
             <p>
-                As soon as you give the go ahead, I will start the repair process. I’ll send you updates on the progress until the job is completed.
+                As soon as you give the go ahead, I will start the repair process. I’ll send you updates on the progress
+                until the job is completed.
             </p>
             <br>
             <h2> 6. Finished: </h2>
             <p>
-                Your watch is now ready to face the world again. I’ll contact you with the good news and once I’ve received payment, we can then arrange the process for returning the watch to you.
+                Your watch is now ready to face the world again. I’ll contact you with the good news and once I’ve
+                received payment, we can then arrange the process for returning the watch to you.
                 All my full service repairs come with a 1 year service warranty.
             </p>
 
@@ -177,15 +183,26 @@
         <div class="col-sm-6 align-self-center">
 
             <h2> About Me </h2>
+            <br>
             <p>
-                Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                My name is Howie Woiwod and I am a watchmaker. I studied this craft at the École nationale de
+                l'horlogerie in Trois Rivieres, Quebec and graduated as a certified Watchmaker December of 2016. Such a
+                great experience because I got some fantastic hands-on training at a world class facility.
+            </p>
+            <p> I got my real world experience working for Jason at Roldorf and Co. in Vancouver for 3 great years.
+                Having the opportunity to work for an independent was extremely valuable as I have seen and worked on
+                many types of watches, like Rolex and Omega and all the common household brands plus many more. I
+                enthusiastically faced plenty of challenges.
+            </p>
+            <p>
+                I was also part of the design and manufacturing of the Halios Seaforth "Roldorf Edition" with Jason
+                Gallop of Roldorf and Co and Jason Lim of Halios watches. This was an incredible ride and a dream come
+                true. You can read about this experience and others on my blog page.
+            </p>
+            <p>
+                My goal is to serve the watch community with a loving touch and an open heart. Watches serve so many
+                purposes in our lives and each one has a unique story. I'd like to bridge the gap that many watchmakers
+                have with clients by offering a customer based web experience using video to it's potential.
             </p>
 
         </div> <!-- Hero Text -->
@@ -200,8 +217,8 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
-    $(document).ready(function(){
-        $("#contact-form").submit(function(event){
+    $(document).ready(function () {
+        $("#contact-form").submit(function (event) {
             event.preventDefault();
             var name1 = $('#name').val();
             var email1 = $('#email').val();
@@ -210,9 +227,9 @@
             $.ajax({
                 method: 'post',
                 url: 'send',
-                data: JSON.stringify({ name1: name1, email1: email1, message1: message1 }),
+                data: JSON.stringify({name1: name1, email1: email1, message1: message1}),
                 contentType: 'application/json',
-                success: function(data) {
+                success: function (data) {
                     $('#response-contact').attr('type', 'image');
                     $('#response-contact').attr('src', data.icon);
                 }
