change title text change h1 font size move down arrow to center

--- a/watch/public/index.html
+++ b/watch/public/index.html
@@ -61,14 +61,15 @@
         </div> <!-- Hero Clock -->
 
         <div class="col-sm-6 align-self-center">
-            <h1> The Dialed In Watchmaker </h1>
+            <h1> The<br>Dialed In<br>Watchmaker </h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Vancouver’s very own “Virtual Watchmaker”.
+                Thank you for stopping by!
+                This website is here to provide an interactive space that people can reach out to me and talk openly
+                about their watches and specific repair needs. I aim to drop the mystery around watchmaking and show you
+                the magic that is horology.
             </p>
+            <p>WELCOME!<br>Click on the video below and see how it works.</p>
             <img id="hero_arrow" src="assets/arrow.png">
         </div> <!-- Hero Text -->
 
