--- a/watch/public/index.html
+++ b/watch/public/index.html
@@ -147,6 +147,12 @@
             <br>
             <div id="twitter-block-1"></div>
             <div id="twitter-block-2"></div>
+
+            <form id="tweet-form">
+                <button type="submit" class="btn btn-action" id="btn-tweets">Update Tweet</button>
+                <label for="response-tweets"></label>
+                <input type="hidden" id="response-tweets" name="response-tweets" readonly>
+            </form>
         </div> <!-- Latest Updates -->
         <div class="col-sm-6">
             <h2>Send a Message!</h2>
@@ -164,7 +170,7 @@
                     <label for="message">Message</label>
                     <textarea class="form-control" id="message" name="message" required></textarea>
                 </div>
-                <button type="submit" class="btn" id="btn-contact">Submit</button>
+                <button type="submit" class="btn btn-action" id="btn-contact">Submit</button>
                 <label for="response-contact"></label>
                 <input type="hidden" id="response-contact" name="response-contact" readonly>
             </form>
@@ -217,6 +223,8 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<!-- Contact and Updates Scripts -->
 <script>
     $(document).ready(function () {
         $("#contact-form").submit(function (event) {
@@ -234,8 +242,25 @@
                     $('#response-contact').attr('type', 'image');
                     $('#response-contact').attr('src', data.icon);
                 }
+            });
+            console.log('test')
+        });
+    });
 
-            })
+    $(document).ready(function () {
+        $("#tweet-form").submit(function (event) {
+            event.preventDefault();
+
+            $.ajax({
+                method: 'get',
+                url: 'getTweets',
+                contentType: 'application/json',
+                success: function (data) {
+                }
+
+            });
+
+            console.log('test')
         });
     });
 </script>
