--- a/watch/public/index.html
+++ b/watch/public/index.html
@@ -184,6 +184,26 @@
 
 <div class="spacebar"></div>
 
+<div id="calendly" class="container">
+    <div class="row">
+        <div class="col"></div>
+        <div class="col-md-auto text-center">
+            <h2> Book an Appointment! </h2>
+        </div>
+        <div class="col"></div>
+
+    </div>
+    <!-- Use style="min-width:1000px;height:800px;" to fit page -->
+    <!-- Calendly inline widget begin -->
+    <div class="calendly-inline-widget"
+         data-url="https://calendly.com/chestercervantes/watchmaker-1-hour-session?primary_color=ff7d00"
+         style="min-width:1000px;height:800px;"></div>
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+    <!-- Calendly inline widget end -->
+</div>
+
+<div class="spacebar"></div>
+
 <div id="about" class="container">
     <div class="row">
 
