--- a/watch/public/index.html
+++ b/watch/public/index.html
@@ -151,13 +151,14 @@
             <div class="twitter-component" id="latest-tweet-2">No more tweets available</div>
             <div class="twitter-component" id="latest-tweet-3">No more tweets available</div>
 
-            <form id="tweet-form">
-                <button type="submit" class="btn btn-action" id="btn-tweets">Update Tweet</button>
-                <label for="response-tweets"></label>
-                <input type="hidden" id="response-tweets" name="response-tweets" readonly>
-                <!--                <input type="hidden" id="test-tweets" name="test-tweets" readonly>-->
-            </form>
+            <!--            <form id="tweet-form">-->
+            <!--                <button type="submit" class="btn btn-action" id="btn-tweets">Update Tweet</button>-->
+            <!--                <label for="response-tweets"></label>-->
+            <!--                <input type="hidden" id="response-tweets" name="response-tweets" readonly>-->
+            <!--                &lt;!&ndash;                <input type="hidden" id="test-tweets" name="test-tweets" readonly>&ndash;&gt;-->
+            <!--            </form>-->
         </div> <!-- Latest Updates -->
+        <div class="spacebar"></div>
         <div class="col-sm-6">
             <h2>Send a Message!</h2>
             <br>
@@ -186,18 +187,21 @@
 
 <div id="calendly" class="container">
     <div class="row">
-        <div class="col"></div>
-        <div class="col-md-auto text-center">
+        <div class="col">
             <h2> Book an Appointment! </h2>
         </div>
-        <div class="col"></div>
+
 
     </div>
     <!-- Use style="min-width:1000px;height:800px;" to fit page -->
     <!-- Calendly inline widget begin -->
-    <div class="calendly-inline-widget"
-         data-url="https://calendly.com/chestercervantes/watchmaker-1-hour-session?primary_color=ff7d00"
-         style="min-width:1000px;height:800px;"></div>
+    <div class="row">
+        <div class="col">
+            <div class="calendly-inline-widget"
+                 data-url="https://calendly.com/chestercervantes/watchmaker-1-hour-session?primary_color=ff7d00"
+                 style=height:900px;"></div>
+        </div>
+    </div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
     <!-- Calendly inline widget end -->
 </div>
