--- a/watch/public/index.html
+++ b/watch/public/index.html
@@ -223,6 +223,47 @@
 
 <div class="spacebar"></div>
 
+    <div id="subscription" class="container h-100">
+        <div class="row align-items-center h-100">
+            <div class="col-8 mx-auto">
+        <!-- Begin Mailchimp Signup Form -->
+<!--        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">-->
+<!--        <style type="text/css">-->
+<!--            #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }-->
+<!--            /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.-->
+<!--               We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */-->
+<!--        </style>-->
+        <div id="mc_embed_signup">
+            <form action="https://gmail.us2.list-manage.com/subscribe/post?u=28eaead70afd479bbb401771e&amp;id=f6a6f17b24" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                    <h2>Subscribe to our Mailing List</h2>
+                    <div class="form-group">
+                        <label for="mce-EMAIL">Email Address</label>
+                        <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
+                    </div>
+<!--                    <div class="form-group">-->
+<!--                        <label for="name">Name</label>-->
+<!--                        <input type="text" class="form-control" id="name" name="name" required>-->
+<!--                    </div>-->
+                    <div id="mce-responses" class="clear">
+                        <div class="response" id="mce-error-response" style="display:none"></div>
+                        <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_28eaead70afd479bbb401771e_f6a6f17b24" tabindex="-1" value=""></div>
+                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-action"></div>
+                </div>
+            </form>
+        </div>
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+        <!--End mc_embed_signup-->
+    </div>
+</div>
+
+
+</div>
+<div class="spacebar"></div>
+
+
 <!-- Bootstrap Scripts -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
