--- a/watch/public/index.html
+++ b/watch/public/index.html
@@ -193,13 +193,13 @@
 
 
     </div>
-    <!-- Use style="min-width:1000px;height:800px;" to fit page -->
-    <!-- Calendly inline widget begin -->
     <div class="row">
         <div class="col">
-            <div class="calendly-inline-widget"
-                 data-url="https://calendly.com/chestercervantes/watchmaker-1-hour-session?primary_color=ff7d00"
-                 style=height:900px;"></div>
+            <!-- Calendly link widget begin -->
+            <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+            <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+            <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/chestercervantes/watchmaker-1-hour-session'});return false;">Schedule time with me</a>
+            <!-- Calendly link widget end -->
         </div>
     </div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
