linked learn more page

--- a/watch/public/index.html
+++ b/watch/public/index.html
@@ -39,7 +39,7 @@
                 <li class="nav-item"><a class="nav-link" href="#video"> About </a></li>
                 <li class="nav-item"><a class="nav-link" href="#how_it_works"> How It Works </a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact"> Contact Me </a></li>
-                <li class="nav-item"><a class="nav-link" href="#"> Learn More </a></li>
+                <li class="nav-item"><a class="nav-link" href="learn_more.html"> Learn More </a></li>
                 <li class="nav-item"><a class="nav-link" href="#"> Shop </a></li>
             </ul>
         </div> <!-- Navbar Nav -->
