--- a/watch/public/learn_more.html
+++ b/watch/public/learn_more.html
@@ -19,11 +19,14 @@
     <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
+
+    <div class="spacebar"></div>
+
     <div id="about" class="container">
         <div class="row">
 
             <div class="col-sm-6 align-self-center">
-                <img class="image" src="profile.png">
+                <img class="image" src="assets/profile.png">
             </div> <!-- Hero Clock -->
 
             <div class="col-sm-6 align-self-center">
