- add instafeed options

--- a/public/index.html
+++ b/public/index.html
@@ -236,6 +236,9 @@
 
         <script type="text/javascript">
             var feed = new Instafeed({
+                get: 'user',
+                target: 'instafeed',
+                resolution: 'low_resolution',
                 accessToken: process.env.INSTAGRAM_TOKEN
             });
             feed.run();
