--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/footer.css">
 
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script type="text/javascript" src="path/to/instafeed.min.js"></script>
 </head>
 
 <body>
