- add InstagramToken variable

--- a/public/index.html
+++ b/public/index.html
@@ -240,7 +240,7 @@
                 get: 'user',
                 target: 'instafeed',
                 resolution: 'low_resolution',
-                accessToken: process.env.INSTAGRAM_TOKEN
+                accessToken: InstagramToken
             });
             feed.run();
         </script>
