--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,6 @@
     <link rel="stylesheet" href="css/footer.css">
 
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../instafeed.min.js"></script>
-    <script src='https://watch-cc.herokuapp.com/token.js'></script>
 </head>
 
 <body>
@@ -235,17 +233,8 @@
 
     <div id="instagram" class="container h-100">
         <div id="instafeed"></div>
-
-        <script type="text/javascript">
-            var feed = new Instafeed({
-                get: 'user',
-                target: 'instafeed',
-                resolution: 'low_resolution',
-                accessToken: InstagramToken
-            });
-            feed.run();
-        </script>
     </div>
+
     <footer id="footer" class="footer">
         <div class="container d-flex justify-content-center">
             <a href="#"><img class="footer-sm" src="assets/socialMedia/facebook.png"></a>
@@ -260,6 +249,19 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- Instagram Feed Scripts -->
+    <script src='https://watch-cc.herokuapp.com/token.js'></script>
+    <script type="text/javascript" src="../instafeed.min.js"></script>
+    <script type="text/javascript">
+        var feed = new Instafeed({
+            get: 'user',
+            target: 'instafeed',
+            resolution: 'low_resolution',
+            accessToken: InstagramToken
+        });
+        feed.run();
+    </script>
 
     <!-- Contact and Updates Scripts -->
     <script>
