--- a/public/index.html
+++ b/public/index.html
@@ -251,7 +251,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- Instagram Feed Scripts -->
-    <script src='https://watch-cc.herokuapp.com/token.js'></script>
+    <script src='https://watch-token-cc.herokuapp.com/token.js'></script>
     <script type="text/javascript" src="../instafeed.min.js"></script>
     <script type="text/javascript">
         var feed = new Instafeed({
